tools/tests/errors/surf_arity_13.experr
function got an unexpected keyword argument 'z'
